--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<hr class="mb-5" />
 					<div class="row">
 						<div class="col-lg-4">
-							<div class="search_container">
+							<div class="search_container mb-2">
 								<form action="">
 									<input type="text" class="search_box" placeholder="Қидириш" />
 									<i class="fas fa-search"></i>
