--- a/xududlar.html
+++ b/xududlar.html
@@ -365,14 +365,14 @@ function downloadTXT() {
 
 		</script>
 		<script src="assets/js/main.js"></script>
-		<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<!-- <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 		<script src="assets/vendor/php-email-form/validate.js"></script>
 		<script src="assets/vendor/aos/aos.js"></script>
 		<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
 		<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 		<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 		<script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-		<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+		<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script> -->
 		
 		<!-- <script src="assets/js/script.js"></script> -->
 		<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
