--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 									<div class="content-header mt-4">
 										<div class="content-title">
 											<h5>
-												<b><a href="">Қишлоқ, ўрмон ва балиқчилик</a></b>
+												<b><a href="xududlar.html">Қишлоқ, ўрмон ва балиқчилик</a></b>
 											</h5>
 										</div>
 										<div class="content-info">
@@ -178,7 +178,7 @@
 									<div class="content-header mt-4">
 										<div class="content-title">
 											<h5>
-												<b><a href="">Инвестициялар ва қурилиш</a></b>
+												<b><a href="xududlar.html">Инвестициялар ва қурилиш</a></b>
 											</h5>
 										</div>
 										<div class="content-info">
@@ -212,7 +212,7 @@
 									<div class="content-header mt-4">
 										<div class="content-title">
 											<h5>
-												<b><a href="">Истеъмол бозори</a></b>
+												<b><a href="xududlar.html">Истеъмол бозори</a></b>
 											</h5>
 										</div>
 										<div class="content-info">
@@ -246,7 +246,7 @@
 									<div class="content-header mt-4">
 										<div class="content-title">
 											<h5>
-												<b><a href="">Корхоналар статистикаси</a></b>
+												<b><a href="xududlar.html">Корхоналар статистикаси</a></b>
 											</h5>
 										</div>
 										<div class="content-info">
