--- a/xududlar.html
+++ b/xududlar.html
@@ -54,11 +54,8 @@
 						<li class="dropdown">
 							<a href="#"><span>УЗБ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
 							<ul>
-								<li><a href="#">Deep Dropdown 1</a></li>
-								<li><a href="#">Deep Dropdown 2</a></li>
-								<li><a href="#">Deep Dropdown 3</a></li>
-								<li><a href="#">Deep Dropdown 4</a></li>
-								<li><a href="#">Deep Dropdown 5</a></li>
+								<li><a href="#">EN</a></li>
+								<li><a href="#">RU</a></li>
 							</ul>
 						</li>
 						<li>
@@ -108,6 +105,7 @@
 							<div class="filter-box mt-4">
 								<div class="filter-title">Filtrlash</div>
 								<div class="filter-body mx-2">
+									<div class="dashed-line"></div>
 									<div class="filter-item" onclick="toggleFilters('regionFilters')"><i class="fas fa-globe"></i> Худудлар</div>
 									<div id="regionFilters" class="filter-container">
 										<input type="checkbox" class="region" value="Toshkent" /> Тошкент вилояти <br />
@@ -116,7 +114,7 @@
 										<input type="checkbox" class="region" value="Fargona" /> Фарғона вилояти <br />
 										<input type="checkbox" class="region" value="Andijon" /> Андижон вилояти <br />
 									</div>
-
+									<div class="dashed-line"></div>
 									<div class="filter-item" onclick="toggleFilters('yearFilters')"><i class="fas fa-calendar"></i> Йиллар</div>
 									<div id="yearFilters" class="filter-container">
 										<input type="checkbox" class="year" value="2015" /> 2015 <br />
@@ -130,7 +128,7 @@
 										<input type="checkbox" class="year" value="2023" /> 2023 <br />
 										<input type="checkbox" class="year" value="2024" /> 2024 <br />
 									</div>
-
+									<div class="dashed-line"></div>
 									<div class="filter-item" onclick="toggleFilters('seriesFilters')"><i class="fas fa-list"></i> Серия</div>
 									<div id="seriesFilters" class="filter-container">
 										<input type="checkbox" class="series" value="A" /> A <br />
