--- a/index.html
+++ b/index.html
@@ -48,11 +48,8 @@
 						<li class="dropdown">
 							<a href="#"><span>УЗБ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
 							<ul>
-								<li><a href="#">Deep Dropdown 1</a></li>
-								<li><a href="#">Deep Dropdown 2</a></li>
-								<li><a href="#">Deep Dropdown 3</a></li>
-								<li><a href="#">Deep Dropdown 4</a></li>
-								<li><a href="#">Deep Dropdown 5</a></li>
+								<li><a href="#">EN</a></li>
+								<li><a href="#">RU</a></li>
 							</ul>
 						</li>
 						<li>
